almost fix about sidebar

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -56,26 +56,14 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="about-sidebar">
-                    <h3>{% trans 'Official Docs<small> - GR</small>' %}</h3>
-                    <div>
-                      <div class="program-sidebar-regulation">
-                          <div class="separator"></div>
-                          <h4><a href="{% static '/main/files/kanonismos-leitourgias.pdf' %}">{% trans 'Concept' %}</a></h4>
-                          <div class="separator"></div>
-                      </div>
-                      <div class="program-sidebar-regulation">
-                          <div class="separator"></div>
-                          <h4><a href="{% static '/main/files/kanonismos-leitourgias.pdf' %}">{% trans 'Memorandum' %}</a></h4>
-                          <div class="separator"></div>
-                      </div>
-                      <div class="program-sidebar-regulation">
-                          <div class="separator"></div>
-                          <h4><a href="{% static '/main/files/kanonismos-leitourgias.pdf' %}">{% trans 'Regulation' %}</a></h4>
-                          <div class="separator"></div>
-                      </div>
-                    </div>
-                </div>
+              <h3>{% trans 'Official Docs<small> - GR</small>' %}</h3>
+              <div class="sidebar-module sidebar-module-inset sidebar-meetups">
+                <ul>
+                    <li><a href="{% static '/main/files/kanonismos-leitourgias.pdf' %}">{% trans 'Concept' %}</a></li>
+                    <li><a href="{% static '/main/files/kanonismos-leitourgias.pdf' %}">{% trans 'Memorandum' %}</a></li>
+                    <li><a href="{% static '/main/files/kanonismos-leitourgias.pdf' %}">{% trans 'Regulation' %}</a></li>
+                </ul>
+              </div>
             </div>
         </div>
     </div>
