--- a/main/templates/main/apply.html
+++ b/main/templates/main/apply.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="form-group">
                         <label for="id_answer_idea_2">
-                            {% trans 'Please describe your concept with a one-sentence pitch, as follows: "My company, _(insert name of company)_, is developing _(a defined offering)_ to help _(a defined audience)_ _(solve a problem)_ with _(secret sauce)_". (https://fi.co/madlibs)' %}
+                            {% trans 'Please describe your concept with a one-sentence pitch, as follows: "We develop _(a defined offering)_ to help _(a defined audience)_ _(solve a problem)_ with _(secret sauce)_". (https://fi.co/madlibs)' %}
                         </label>
                         <textarea name="answer_idea_2" cols="50" rows="2" class="form-control" id="id_answer_idea_2"></textarea>
                     </div>
@@ -48,6 +48,7 @@
                         <br>
                         <select name="answer_idea_3" id="id_answer_idea_3">
                             <option value="idea">Idea</option>
+                            <option value="idea">Idea under development</option>
                             <option value="prototype">Prototype</option>
                             <option value="users">Early users</option>
                             <option value="revenue">Early revenue</option>
@@ -69,77 +70,23 @@
                     </div>
                     <div class="form-group">
                         <label for="id_answer_market_3">
-                            {% trans 'What kind of solutions, if any, are your target customers using today to solve this problem or challenge?' %}
-                        </label>
-                        <textarea name="answer_market_3" cols="50" rows="2" class="form-control" id="id_answer_market_3"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="id_answer_market_4">
                             {% trans 'Can you name two or three of your closest competitors, if any exist? Please provide links to their websites.' %}
                         </label>
-                        <textarea name="answer_market_4" cols="50" rows="4" class="form-control" id="id_answer_market_4"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="id_answer_market_5">
-                            {% trans 'What is different about your product/service that makes it better than the competition?' %}
-                        </label>
-                        <textarea name="answer_market_5" cols="50" rows="2" class="form-control" id="id_answer_market_5"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="id_answer_market_6">
-                            {% trans 'Please give us your assessment of the market potential. For instance, how large is the total addressable market for this product/service? How many potential customers exist out there? How much money could they possibly spend with your company every year? Is this market going to be growing year over year? What are the trends affecting market growth?' %}
-                        </label>
-                        <textarea name="answer_market_6" cols="50" rows="3" class="form-control" id="id_answer_market_6"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="id_answer_market_7">
-                            {% trans 'Have you yet taken any steps to validate the demand for your product/service in the market?' %}
-                        </label>
-                        <textarea name="answer_market_7" cols="50" rows="2" class="form-control" id="id_answer_market_7"></textarea>
+                        <textarea name="answer_market_3" cols="50" rows="4" class="form-control" id="id_answer_market_4"></textarea>
                     </div>
                     <br>
                     <h4>{% trans 'Team' %}</h4>
                     <div class="form-group">
                         <label for="id_answer_team_1">
-                            {% trans 'How many founders do you have in the team and how many team members in total, including employees (if any)?' %}
+                            {% trans 'What is your team composition and roles? For every team member please give us: 1) name; 2) description of role in the team; 3) full-time or part-time involvement status; 4) relevant professional experience or educational background; 5) links to online profiles if available.' %}
                         </label>
-                        <textarea name="answer_team_1" cols="50" rows="2" class="form-control" id="id_answer_team_1"></textarea>
+                        <textarea name="answer_team_1" cols="50" rows="6" class="form-control" id="id_answer_team_2"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="id_answer_team_2">
-                            {% trans 'What is your team composition and roles? For every team member please give us: 1) name; 2) description of role in the team; 3) full-time or part-time involvement status; 4) relevant professional experience or educational background; 5) links to online profiles if available.' %}
-                        </label>
-                        <textarea name="answer_team_2" cols="50" rows="6" class="form-control" id="id_answer_team_2"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="id_answer_team_3">
-                            {% trans 'How equipped is your current team to bring this product/service to the market?' %}
-                        </label>
-                        <textarea name="answer_team_3" cols="50" rows="2" class="form-control" id="id_answer_team_3"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="id_answer_team_4">
-                            {% trans 'Will you need to add more core skills to the team? ' %}
-                        </label>
-                        <textarea name="answer_team_4" cols="50" rows="2" class="form-control" id="id_answer_team_4"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="id_answer_team_5">
                             {% trans 'Why did the team start working on this idea? What excites you about it?' %}
                         </label>
-                        <textarea name="answer_team_5" cols="50" rows="2" class="form-control" id="id_answer_team_5"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="id_answer_team_6">
-                            {% trans 'When did you start working on the project and what progress have you made over the past 3 months?' %}
-                        </label>
-                        <textarea name="answer_team_6" cols="50" rows="2" class="form-control" id="id_answer_team_6"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="id_answer_team_7">
-                            {% trans "What is the founders' 3-year vision for the business? If all goes perfect, what should the business look like in 3 years from now?" %}
-                        </label>
-                        <textarea name="answer_team_7" cols="50" rows="3" class="form-control" id="id_answer_team_7"></textarea>
+                        <textarea name="answer_team_2" cols="50" rows="2" class="form-control" id="id_answer_team_5"></textarea>
                     </div>
                     <br>
                     <h4>{% trans 'Support' %}</h4>
