correct application questions

--- a/main/templates/main/apply.html
+++ b/main/templates/main/apply.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="form-group">
                         <label for="id_answer_idea_2">
-                            {% trans 'Please describe your concept with a one-sentence pitch, as follows: "We develop _(a defined offering)_ to help _(a defined audience)_ _(solve a problem)_ with _(secret sauce)_". (https://fi.co/madlibs)' %}
+                            {% trans 'Please describe your concept with a one-sentence pitch, as follows: "We develop _(a defined offering)_ to help _(a defined audience)_ _(solve a problem)_ with _(secret sauce)_".' %}
                         </label>
                         <textarea name="answer_idea_2" cols="50" rows="2" class="form-control" id="id_answer_idea_2"></textarea>
                     </div>
@@ -110,7 +110,7 @@
                     </div>
                     <div class="form-group">
                         <label for="id_answer_support_4">
-                            {% trans 'If accepted, how many of your team members would make use of the co-working space at OK!Thess on a daily basis?' %}
+                            {% trans 'If accepted, how many of your team members would make use of the co-working space at OK!Thess on a daily or weekly basis?' %}
                         </label>
                         <textarea name="answer_support_4" cols="50" rows="2" class="form-control" required="required" id="id_answer_support_4"></textarea>
                     </div>
