--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -21,13 +21,13 @@
 
 	<meta itemprop="name" content="OK!Thess">
 	<meta itemprop="description" content="OK!Thess provides space and technical support to teams with innovative ideas.">
-	<meta itemprop="image" content="https://s3.eu-central-1.amazonaws.com/okthess-static/uploads/logo.png">
+	<meta itemprop="image" content="https://s3.eu-central-1.amazonaws.com/okthess-static/uploads/cover.png">
 
     {% block og %}
         <meta property="og:title" content="OK!Thess">
         <meta property="og:description" content="OK!Thess provides space and technical support to teams with innovative ideas.">
         <meta property="og:url" content="http://okthess.gr">
-        <meta property="og:image" content="https://s3.eu-central-1.amazonaws.com/okthess-static/uploads/logo.png">
+        <meta property="og:image" content="https://s3.eu-central-1.amazonaws.com/okthess-static/uploads/cover.png">
         <meta property="og:type" content="website">
     {% endblock %}
 
@@ -37,7 +37,7 @@
         <meta name="twitter:creator" content="@ntemposd">
         <meta name="twitter:title" content="OK!Thess">
         <meta name="twitter:description" content="OK!Thess provides space and technical support to teams with innovative ideas.">
-        <meta name="twitter:image" content="https://s3.eu-central-1.amazonaws.com/okthess-static/uploads/logo.png">
+        <meta name="twitter:image" content="https://s3.eu-central-1.amazonaws.com/okthess-static/uploads/cover.png">
     {% endblock %}
 
 	<link rel="stylesheet" href="{% static '/main/css/bootstrap.min.css' %}">
@@ -57,7 +57,7 @@
 <body>
     <nav class="navbar navbar-default">
         <div class="navbar-header">
-            <a class="navbar-brand" href="{% url 'main:index' %}"><img src="{% static '/main/img/logo.png' %}" alt="Logo"></a>
+            <a class="navbar-brand" href="{% url 'main:index' %}"><img src="{% static '/main/img/cover.png' %}" alt="Logo"></a>
             <a class="btn-red btn-header" href="{% url 'main:apply' %}" role="button">
                 <span class="glyphicon glyphicon-exclamation-sign"></span>{% trans "<strong>Apply</strong> for Winter '18" %}
             </a>
