--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -57,7 +57,7 @@
 <body>
     <nav class="navbar navbar-default">
         <div class="navbar-header">
-            <a class="navbar-brand" href="{% url 'main:index' %}"><img src="{% static '/main/img/cover.png' %}" alt="Logo"></a>
+            <a class="navbar-brand" href="{% url 'main:index' %}"><img src="{% static '/main/img/logo.png' %}" alt="Logo"></a>
             <a class="btn-red btn-header" href="{% url 'main:apply' %}" role="button">
                 <span class="glyphicon glyphicon-exclamation-sign"></span>{% trans "<strong>Apply</strong> for Winter '18" %}
             </a>
