--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -44,6 +44,12 @@
     <link rel="stylesheet" href="{% static '/main/css/style.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&amp;subset=greek" rel="stylesheet">
 
+    <script>
+        if (document.location.host.substring(0,3) === 'www') {
+            document.location.href = 'https://okthess.gr/'
+        }
+    </script>
+
 	<script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
