fix more link at events page

--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -27,7 +27,7 @@
                               <p class="events-single-para">{{ event.description }}</p>
                               <div class="events-single-data">
                                   <div class="events-single-data-link">
-                                      <a href="{{ event.organizer_link }}" target="_blank">
+                                      <a href="{{ event.link }}" target="_blank">
                                           More <i class="glyphicon glyphicon-chevron-right"></i>
                                       </a>
                                   </div>
@@ -54,7 +54,7 @@
                               <p class="events-single-para">{{ event.description }}</p>
                               <div class="events-single-data">
                                 <div class="events-single-data-link">
-                                    <a href="{{ event.organizer_link }}" target="_blank">
+                                    <a href="{{ event.link }}" target="_blank">
                                         More <i class="glyphicon glyphicon-chevron-right"></i>
                                     </a>
                                 </div>
