fix description on index

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -11,7 +11,7 @@
                     <h1>ΟΚ!Τhess</h1>
                     <h2>{% trans 'Your early stage partner' %}</h2>
                     <p class="desc">
-                      {% blocktrans %}OK!Thess provides space and and a technical support program for teams of people
+                      {% blocktrans %}OK!Thess provides space and technical support program for teams of people
                       with innovative ideas helping them to <strong>Validate a Business
                       Model Fast</strong>, and to <strong>Meet,
                       Mix and Connect</strong> with like-minded peers.
