--- a/main/templates/main/apply.html
+++ b/main/templates/main/apply.html
@@ -134,7 +134,7 @@
                         </label>
                         <input type="email" name="email" class="form-control" maxlength="254" required="required" id="id_email">
                     </div>
-                    <button type="submit" class="btn-form">{% trans 'Submit' %}</button>
+                    <button type="submit" id="submitButton" class="btn-form">{% trans 'Submit' %}</button>
                     <script type="text/javascript">
                         $( '#$submitButton' ).click(function() {
                            fbq('track', 'CompleteRegistration');
