add missing snippet part(?)

--- a/main/templates/main/apply.html
+++ b/main/templates/main/apply.html
@@ -137,7 +137,9 @@
                     <button type="submit" id="submitButton" class="btn-form">{% trans 'Submit' %}</button>
                     <script type="text/javascript">
                         $( '#$submitButton' ).click(function() {
-                           fbq('track', 'CompleteRegistration');
+                            <script>
+                                fbq('track', 'CompleteRegistration');
+                            </script>
                         }
                     </script>
                 </form>
