--- a/main/templates/main/apply.html
+++ b/main/templates/main/apply.html
@@ -136,7 +136,7 @@
                     </div>
                     <button type="submit" id="submitButton" class="btn-form">{% trans 'Submit' %}</button>
                     <script type="text/javascript">
-                        $( '#$submitButton' ).click(function() {
+                        $( '#submitButton' ).click(function() {
                                 fbq('track', 'CompleteRegistration');{
                                 });
                         });
