--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -64,9 +64,11 @@
     <nav class="navbar navbar-default">
         <div class="navbar-header">
             <a class="navbar-brand" href="{% url 'main:index' %}"><img src="{% static '/main/img/logo.png' %}" alt="Logo"></a>
-            <a class="btn-red btn-header" href="{% url 'main:apply' %}" role="button">
-                <span class="glyphicon glyphicon-exclamation-sign"></span>{% trans "<strong>Apply</strong> for Winter '18" %}
-            </a>
+            {% if not application_content %}
+                <a class="btn-red btn-header" href="{% url 'main:apply' %}" role="button">
+                    <span class="glyphicon glyphicon-exclamation-sign"></span>{% trans "<strong>Apply</strong> for Winter '18" %}
+                </a>
+            {% endif %}
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -82,14 +84,14 @@
                         <li><a tabindex="-1" href="{% url 'main:about' %}#how">{% trans 'How we do it' %}</a></li>
                         <li><a tabindex="-1" href="{% url 'main:about' %}#participate">{% trans 'How do I participate?' %}</a></li>
                         <li><a tabindex="-1" href="{% url 'main:about' %}#space">{% trans 'Space' %}</a></li>
-												<li><a tabindex="-1" href="{% url 'main:about' %}#team">{% trans 'Team' %}</a></li>
+                        <li><a tabindex="-1" href="{% url 'main:about' %}#team">{% trans 'Team' %}</a></li>
                    </ul>
                 </li>
                 <li class="{% active 'program' %}"><a href="{% url 'main:program_teams' %}">{% trans 'Teams' %}</a></li>
                 <li class="{% active 'event' %}"><a href="{% url 'main:events' %}">{% trans 'Meetups' %}</a></li>
                 <li class="{% active 'blog' %}"><a href="{% url 'main:blog' %}">{% trans 'Blog' %}</a></li>
                 <li class="{% active 'contact' %}"><a href="{% url 'main:contact' %}">{% trans 'Contact' %}</a></li>
-	              <li class="navbar-language">
+                <li class="navbar-language">
                     {% csrf_token %}
                     <div class="hidden" id="current-language">{{ LANGUAGE_CODE }}</div>
                     {% if LANGUAGE_CODE == 'en' %}
