--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -44,6 +44,7 @@
     <link rel="stylesheet" href="{% static '/main/css/style.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&amp;subset=greek" rel="stylesheet">
 
+    {% if not debug %}
     <script>
         if (document.location.host.substring(0,3) === 'www') {
             document.location.href = 'https://okthess.gr/'
@@ -52,6 +53,7 @@
             document.location.href = 'https://okthess.gr' + document.location.pathname;
         }
     </script>
+    {% endif %}
 
 	<script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
