Add Partners on footer

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -196,6 +196,13 @@
                         <a href="https://www.ast.gr/" target="_blank">
                             <img src="{% static '/main/img/footer/ast.png' %}" alt="AST" class="footer-content-item-img">
                         </a>
+												<h5>{% trans 'PARTNERS' %}</h5><hr>
+                        <a href="https://www.kemel.gr/" target="_blank">
+                            <img src="{% static '/main/img/footer/kemel.jpg' %}" alt="KEMEL" class="footer-content-item-img">
+                        </a>
+                        <a href="https://www.nbg.gr/en/nbgseeds" target="_blank">
+                            <img src="{% static '/main/img/footer/NBG_Business_Seeds.png' %}" alt="NBG_Seeds" class="footer-content-item-img">
+                        </a>
                     </div>
                 </div>
             </div>
