--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -76,6 +76,7 @@
       'https://connect.facebook.net/en_US/fbevents.js');
       fbq('init', '765314756991403');
       fbq('track', 'PageView');
+      fbq('track', 'CompleteRegistration');
     </script>
     <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=765314756991403&ev=PageView&noscript=1"
