sent ga event on application submission

--- a/main/templates/main/apply.html
+++ b/main/templates/main/apply.html
@@ -134,7 +134,7 @@
                         </label>
                         <input type="email" name="email" class="form-control" maxlength="254" required="required" id="id_email">
                     </div>
-                    <button id="register" type="submit" class="btn-form">{% trans 'Submit' %}</button>
+                    <button id="register" type="submit" class="btn-form" onclick="ga('send', 'event', 'application', 'submission', {'NonInteraction': 1});">{% trans 'Submit' %}</button>
                     <script type="text/javascript">
                         var button = document.getElementById('register');
                         button.addEventListener(
