--- a/main/templates/main/program-teams.html
+++ b/main/templates/main/program-teams.html
@@ -53,13 +53,13 @@
                   <div class="text-right">
                     <a class="btn-red alt" href="/apply/" role="button">{% trans 'Apply now!' %}</a>
                   </div>
-                  <div class="program-sidebar-tabs">
+                  <!-- <div class="program-sidebar-tabs">
                         <ul class="nav nav-pills nav-stacked program-sidebar-tabs-list">
-                            <!-- <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_mentors' %}">{% trans 'Mentors' %}</a></li> -->
+                             <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_mentors' %}">{% trans 'Mentors' %}</a></li>
                             <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_alumni' %}">{% trans 'Alumni »' %}</a></li>
-                            <!--<li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_partners' %}">{% trans 'Team &amp; Partners' %}</a></li>-->
+                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_partners' %}">{% trans 'Team &amp; Partners' %}</a></li>
                         </ul>
-                  </div>
+                  </div> -->
                 </div>
             </div>
         </div>
@@ -138,4 +138,47 @@
             industriesContainerElem.appendChild(newIndustryElem);
         });
     </script>
+    <div class="container program">
+        <div class="row">
+            <div class="col-sm-9">
+                <div class="program-main">
+                    <h1>{% trans 'Graduated Teams' %}</h1>
+                    <div style="margin-bottom: 40px;"></div>
+                    <div class="row">
+                        {% for team in teams_list %}
+                            <div class="col-sm-4 col-sm-6 program-main-company">
+                                <div class="program-main-company-image">
+                                    <a href="{{ team.link }}"><img src="{{ team.image }}" alt="team logo"></a>
+                                </div>
+                                {% if team.name %}
+                                    <div class="program-main-company-name"><a href="{{ team.url }}" >{{ team.name }}</a></div>
+                                {% endif %}
+                                <p class="program-main-company-desc">{{ team.description }}</p>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="program-sidebar">
+                  <h2>{% trans 'Alumni network' %}</h2>
+                  <div class="program-sidebar-box">
+                    {% blocktrans %}
+                    Our graduates comprise the wider OK!Thess network. They meet at regular intervals to exchange post OK!Thess views and knowledge and they are also invited to help our hosted teams as Mentors.
+                    {% endblocktrans %}
+                  </div>
+                  <div class="program-sidebar-tabs">
+                        <ul class="nav nav-pills nav-stacked program-sidebar-tabs-list">
+                            <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_teams' %}">{% trans 'Hosted Teams »' %}</a></li>
+                            <!-- <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_mentors' %}">{% trans 'Mentors' %}</a></li> -->
+                            <!-- <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_partners' %}">{% trans 'Team &amp; Partners' %}</a></li> -->
+                        </ul>
+                  </div>
+                  <div class="text-right">
+                   <a class="btn-red alt" href="/apply/" role="button">{% trans 'Apply now!' %}</a>
+                  </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
