--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -10,7 +10,7 @@
                 <div>
                     <ol>
                         <li><a href="#overview">Overview</a></li>
-                        <li><a href="#speakers">Speakers</a></li>
+                        <li><a href="#mentors">Mentors</a></li>
                         <li><a href="#schedule">Schedule</a></li>
                         <li><a href="#judges">Judges</a></li>
                         <li><a href="#prizes">Prizes</a></li>
@@ -69,9 +69,35 @@
                         No talk, all action!
                     </p>
                 </div>
-                <div id="speakers">
-                    <h2>Speakers</h2>
+                <div id="mentors">
+                    <h2>Mentors</h2>
+                    <div id=container-fluid>
+                      <div id=row>
+                    <div class="md-3">
+                      <img src="/static/main/img/weekends/mobility/chvizmpa.jpg">
+                    </div>
+                    <div class="md-9">
+                          <p>Ο Δρ. Josep Maria Salanova Grau είναι Διπλωματούχος Πολιτικός Μηχανικός
+                          U.P.C. (Universitat Politecnica de Catalunya - 2007) και κάτοχος
+                          Μεταπτυχιακού τίτλου σπουδών στο Σχεδιασμό, Οργάνωση και Διαχείριση
+                          Συστημάτων μεταφορών του Αριστοτελείου Πανεπιστημίου Θεσσαλονίκης
+                          (2008-2009). Το διάστημα 2010-2013 πραγματοποιήθηκε την διδακτορική
+                          διατριβή του στο Universitat Politecnica de Catalunya με τίτλο «modelling of
+                          taxicab fleets in urban environment». Το 2017 ολοκλήρωσε το Data Science
+                          Specialization στο Johns Hopkins University. Εργάζεται ως Ερευνητής Γ
+                          βαθμίδας στο Ινστιτούτο Βιώσιμης Κινητικότητας και Δικτύων Μεταφορών
+                          του Εθνικού Κέντρου Έρευνας και Τεχνολογικής Ανάπτυξης, όπου είναι
+                          υπεύθυνος του εργαστηρίου “Συλλογή – διαχείριση δεδομένων / Διαμόρφωση
+                          αλγορίθμων και χρήση πακέτων σχεδιασμού των μεταφορών”. Κύριοι τομείς
+                          εξειδίκευσης είναι οι αλγόριθμοι, τα μοντέλα, η κινητικότητα, οι συνδυασμένες
+                          εμπορευματικές μεταφορές και τα συστήματα Logistics ‘έτσι ‘όπως το Data
+                          Science και το Big Data στις μεταφορές.</p>
+                        </div>
+                      </div>
+
+
                 </div>
+              </div>
                 <div id="schedule">
                     <h2>Schedule</h2>
                     <div class="weekends-schedule-header">Friday February 23rd</div>
