add overview content

--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -19,85 +19,55 @@
                 </div>
             </div>
             <div class="col-md-8">
-                <h1>«Βιώσιμη αστική μετακίνηση / Εργαλεία & λύσεις»</h1>
+                <h1>Ξεκίνα τώρα</h1>
                 <div class="weekends-subtitle">15 - 17 Ιουνίου 2018</div>
                 <div id="overview">
-                    <h3>
-                        Start Now
-                    </h3>
-                    <p>
-                        Do you have a transport related idea you'd like to pursue or a problem you'd like to solve but
-                        don't know where to start or who to start with?
-                    </p>
-
+                    <p><strong>Έχετε μια ιδέα σχετικά με τις βιώσιμες αστικές μεταφορές  που θέλετε να προωθήσετε ή ένα πρόβλημα που θέλετε να λύσετε, αλλά δεν ξέρετε από πού να ξεκινήσετε ή από ποιον να ξεκινήσετε;</strong></p>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48457.26875562999!2d22.9594983!3d40.61710485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x82bc16c6e0e18389!2sOK*21Thess!5e0!3m2!1sen!2sgr!4v1528134327069" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <p>Το Σαββατοκύριακο Καινοτομίας στις Αστικές Μεταφορές (ΣΚΑΜ) είναι το μέρος για να αναζητήσετε μια ομάδα, να δημιουργήσετε το πρωτότυπο της ιδέας σας, να επικυρώσετε την επιχειρηματική σας ιδέα και να λάβετε πληροφορίες από έμπειρους ανθρώπους που προέρχονται από το χώρο των μεταφορών και των επιχειρήσεων, όλα σε ένα Σαββατοκύριακο.</p>
 
-                    <p>
-                        Startup Weekend is the place to look for a team, create a prototype of your idea, validate your
-                        business idea, and receive feedback from experienced coming from transport and business
-                        entrepreneurs, all in one weekend.
-                    </p>
-
-                    <strong>What do you need to bring?</strong>
-                    <p>
-                        Lots of energy! You'll pitch your own idea or listen to others, then vote on the most interesting
-                        ideas and form teams with diverse skill sets. You can come with friends, but you’ll get the full
-                        experience if you participate in separate teams. Remember, it’s all about the team.
-                    </p>
-
-                    <p>
-                        Your idea should be something you have not previously worked on. The idea you pitch and the
-                        problem you set out to solve can span transport related issued. Over the course of the weekend
-                        you'll be challenged to create a prototype of your MVP, or minimum viable product, that fits the
-                        needs of your target customer. You'll get feedback, iterate, and likely pivot your approach
-                        entirely! Important: You cannot have worked previously on your idea.
-                    </p>
-
-                    <p>
-                        SUMPs Up Startup Weekend is a full weekend long experience. Your ticket includes:
-                    </p>
+                    <h4>Τι πρέπει να φέρετε</h4>
+                    <p>Πολλή ενέργεια! Θα θέσετε τη δική σας ιδέα ή θα ακούσετε άλλους, κατόπιν θα ψηφίσετε τις πιο ενδιαφέρουσες ιδέες και θα διαμορφώσετε ομάδες με διαφορετικά σύνολα δεξιοτήτων. Μπορείτε να έρθετε με φίλους σας, αλλά καλύτερα να συμμετέχετε σε ξεχωριστές ομάδες. Θυμηθείτε, τα πάντα είναι θέμα ομάδας.</p>
+                    <p>Η ιδέα που βάζετε και το πρόβλημα που θέτετε για επίλυση θα πρέπει να καλύψει θέματα σχετικά με τις αστικές μεταφορές και την χρήση νέων τεχνολογιών σε αυτές. Κατά τη διάρκεια του Σαββατοκύριακου, θα κληθείτε να δημιουργήσετε ένα πρωτότυπο δηλαδή ένα ελάχιστο βιώσιμο προϊόν που θα ταιριάζει στις ανάγκες του πελάτη-στόχου σας. Θα λάβετε καθοδήγηση κα συμβουλές, θα επαναπροσδιορίσετε την ιδέα σας και πιθανόν να διαμορφώσετε μια νέα προσέγγισή εξ ολοκλήρου!</p>
+                    <p>Το Σαββατοκύριακο Καινοτομίας στις Αστικές Μεταφορές είναι μια μοναδική εμπειρία που περιλαμβάνει:</p>
                     <ul>
-                        <li>7 full (and delicious) meals over the course of the weekend</li>
-                        <li>Benefits and discounts from our global partners</li>
-                        <li>One-on-one time with amazing mentors</li>
-                        <li>A new network of  transport planners,developers, designers, and entrepreneurs eager, like you, to change the world.</li>
-                        <li>All the internet and coffee you can consume.</li>
+                        <li>7 πλήρη (και νόστιμα) γεύματα κατά τη διάρκεια του Σαββατοκύριακου</li>
+                        <li>Επικοινωνία με καταπληκτικούς συμβούλους</li>
+                        <li>Ένα νέο δίκτυο ανθρώπων προερχόμενων από τον χώρο των μεταφορών, προγραμματιστές, σχεδιαστές και επιχειρηματίες πρόθυμοι, όπως εσείς, να αλλάξουν τον κόσμο.</li>
+                        <li>Όλο το διαδίκτυο και τον καφέ που μπορείτε να καταναλώσετε.</li>
                     </ul>
 
-                    <p>
-                        Don’t wait any longer and join the SUMPs Up Startup Weekend movement!
-                        No talk, all action!
-                    </p>
+                    <p>Αν έχετε ερωτήσεις, μη διστάσετε να επικοινωνήσετε μαζί μας στο REFERENCE EMAIL</p>
+                    <p>Μην περιμένετε πια και δηλώστε συμμετοχή στο Σαββατοκύριακο Καινοτομίας στις Αστικές Μεταφορές!</p>
+                    <p>Καμία άλλη συζήτηση, τώρα μόνο δράση!</p>
                 </div>
                 <div id="mentors">
                     <h2>Mentors</h2>
                     <div id=container-fluid>
                       <div id=row>
-                    <div class="md-3">
-                      <img src="/static/main/img/weekends/mobility/chvizmpa.jpg">
-                    </div>
-                    <div class="md-9">
-                          <p>Ο Δρ. Josep Maria Salanova Grau είναι Διπλωματούχος Πολιτικός Μηχανικός
-                          U.P.C. (Universitat Politecnica de Catalunya - 2007) και κάτοχος
-                          Μεταπτυχιακού τίτλου σπουδών στο Σχεδιασμό, Οργάνωση και Διαχείριση
-                          Συστημάτων μεταφορών του Αριστοτελείου Πανεπιστημίου Θεσσαλονίκης
-                          (2008-2009). Το διάστημα 2010-2013 πραγματοποιήθηκε την διδακτορική
-                          διατριβή του στο Universitat Politecnica de Catalunya με τίτλο «modelling of
-                          taxicab fleets in urban environment». Το 2017 ολοκλήρωσε το Data Science
-                          Specialization στο Johns Hopkins University. Εργάζεται ως Ερευνητής Γ
-                          βαθμίδας στο Ινστιτούτο Βιώσιμης Κινητικότητας και Δικτύων Μεταφορών
-                          του Εθνικού Κέντρου Έρευνας και Τεχνολογικής Ανάπτυξης, όπου είναι
-                          υπεύθυνος του εργαστηρίου “Συλλογή – διαχείριση δεδομένων / Διαμόρφωση
-                          αλγορίθμων και χρήση πακέτων σχεδιασμού των μεταφορών”. Κύριοι τομείς
-                          εξειδίκευσης είναι οι αλγόριθμοι, τα μοντέλα, η κινητικότητα, οι συνδυασμένες
-                          εμπορευματικές μεταφορές και τα συστήματα Logistics ‘έτσι ‘όπως το Data
-                          Science και το Big Data στις μεταφορές.</p>
+                        <div class="md-3">
+                          <img src="/static/main/img/weekends/mobility/chvizmpa.jpg">
+                        </div>
+                        <div class="md-9">
+                                <p class="small">Ο Δρ. Josep Maria Salanova Grau είναι Διπλωματούχος Πολιτικός Μηχανικός
+                                U.P.C. (Universitat Politecnica de Catalunya - 2007) και κάτοχος
+                                Μεταπτυχιακού τίτλου σπουδών στο Σχεδιασμό, Οργάνωση και Διαχείριση
+                                Συστημάτων μεταφορών του Αριστοτελείου Πανεπιστημίου Θεσσαλονίκης
+                                (2008-2009). Το διάστημα 2010-2013 πραγματοποιήθηκε την διδακτορική
+                                διατριβή του στο Universitat Politecnica de Catalunya με τίτλο «modelling of
+                                taxicab fleets in urban environment». Το 2017 ολοκλήρωσε το Data Science
+                                Specialization στο Johns Hopkins University. Εργάζεται ως Ερευνητής Γ
+                                βαθμίδας στο Ινστιτούτο Βιώσιμης Κινητικότητας και Δικτύων Μεταφορών
+                                του Εθνικού Κέντρου Έρευνας και Τεχνολογικής Ανάπτυξης, όπου είναι
+                                υπεύθυνος του εργαστηρίου “Συλλογή – διαχείριση δεδομένων / Διαμόρφωση
+                                αλγορίθμων και χρήση πακέτων σχεδιασμού των μεταφορών”. Κύριοι τομείς
+                                εξειδίκευσης είναι οι αλγόριθμοι, τα μοντέλα, η κινητικότητα, οι συνδυασμένες
+                                εμπορευματικές μεταφορές και τα συστήματα Logistics ‘έτσι ‘όπως το Data
+                                Science και το Big Data στις μεταφορές.</p>
                         </div>
                       </div>
-
-
-                </div>
-              </div>
+                    </div>
+               </div>
                 <div id="schedule">
                     <h2>Schedule</h2>
                     <div class="weekends-schedule-header">Friday February 23rd</div>
