--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -41,36 +41,28 @@
                     <p>Μην περιμένετε πια και δηλώστε συμμετοχή στο Σαββατοκύριακο Καινοτομίας στις Αστικές Μεταφορές!</p>
                     <p>Καμία άλλη συζήτηση, τώρα μόνο δράση!</p>
                 </div>
-                <div id="mentors">
-                    <h2>Mentors</h2>
-                    <div id=container-fluid>
-                      <div id=row>
-                        <div class="md-3">
-                          <img src="/static/main/img/weekends/mobility/chvizmpa.jpg">
-                        </div>
-                        <div class="md-9">
-                                <p class="small">Ο Δρ. Josep Maria Salanova Grau είναι Διπλωματούχος Πολιτικός Μηχανικός
-                                U.P.C. (Universitat Politecnica de Catalunya - 2007) και κάτοχος
-                                Μεταπτυχιακού τίτλου σπουδών στο Σχεδιασμό, Οργάνωση και Διαχείριση
-                                Συστημάτων μεταφορών του Αριστοτελείου Πανεπιστημίου Θεσσαλονίκης
-                                (2008-2009). Το διάστημα 2010-2013 πραγματοποιήθηκε την διδακτορική
-                                διατριβή του στο Universitat Politecnica de Catalunya με τίτλο «modelling of
-                                taxicab fleets in urban environment». Το 2017 ολοκλήρωσε το Data Science
-                                Specialization στο Johns Hopkins University. Εργάζεται ως Ερευνητής Γ
-                                βαθμίδας στο Ινστιτούτο Βιώσιμης Κινητικότητας και Δικτύων Μεταφορών
-                                του Εθνικού Κέντρου Έρευνας και Τεχνολογικής Ανάπτυξης, όπου είναι
-                                υπεύθυνος του εργαστηρίου “Συλλογή – διαχείριση δεδομένων / Διαμόρφωση
-                                αλγορίθμων και χρήση πακέτων σχεδιασμού των μεταφορών”. Κύριοι τομείς
-                                εξειδίκευσης είναι οι αλγόριθμοι, τα μοντέλα, η κινητικότητα, οι συνδυασμένες
-                                εμπορευματικές μεταφορές και τα συστήματα Logistics ‘έτσι ‘όπως το Data
-                                Science και το Big Data στις μεταφορές.</p>
-                        </div>
-                      </div>
+                <br>
+                <h2>Mentors</h2>
+                <div class="container" id="mentors">
+
+                    <div class="col-md-2 mentor">
+                     <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/chvizmpa.jpg">
                     </div>
-               </div>
+                    <div class="col-md-10 mentor">
+                      <p class="weekends-mentor-bio small">Ο Δρ. Josep Maria Salanova Grau είναι Διπλωματούχος Πολιτικός Μηχανικός U.P.C. (Universitat Politecnica de Catalunya - 2007) και κάτοχος
+                      Μεταπτυχιακού τίτλου σπουδών στο Σχεδιασμό, Οργάνωση και Διαχείριση Συστημάτων μεταφορών του Αριστοτελείου Πανεπιστημίου Θεσσαλονίκης
+                      (2008-2009). Το διάστημα 2010-2013 πραγματοποιήθηκε την διδακτορική διατριβή του στο Universitat Politecnica de Catalunya με τίτλο «modelling of
+                      taxicab fleets in urban environment». Το 2017 ολοκλήρωσε το Data Science Specialization στο Johns Hopkins University. Εργάζεται ως Ερευνητής Γ
+                      βαθμίδας στο Ινστιτούτο Βιώσιμης Κινητικότητας και Δικτύων Μεταφορών του Εθνικού Κέντρου Έρευνας και Τεχνολογικής Ανάπτυξης, όπου είναι
+                      υπεύθυνος του εργαστηρίου “Συλλογή – διαχείριση δεδομένων / Διαμόρφωση αλγορίθμων και χρήση πακέτων σχεδιασμού των μεταφορών”. Κύριοι τομείς
+                      εξειδίκευσης είναι οι αλγόριθμοι, τα μοντέλα, η κινητικότητα, οι συνδυασμένες εμπορευματικές μεταφορές και τα συστήματα Logistics ‘έτσι ‘όπως το Data
+                      Science και το Big Data στις μεταφορές.</p>
+                    </div>
+                  </div>
+
                 <div id="schedule">
                     <h2>Schedule</h2>
-                    <div class="weekends-schedule-header">Friday February 23rd</div>
+                    <div class="weekends-schedule-header">ΠΑΡΑΣΚΕΥΗ -DATE- </div>
                     <div class="weekends-schedule-content">
                         <div class="weekends-schedule-content-item">
                             <div class="weekends-schedule-content-item-time">6:30pm</div>
