add weekends application form

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -1348,9 +1348,7 @@ textarea {
 }
 
 .weekends-mentor-bio {
-  float: right;
-  padding: 0;
-  margin: 0;
+  max-width: 100%;
 }
 
 .weekends-schedule-header {
