--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -43,12 +43,11 @@
                 </div>
                 <br>
                 <h2>Mentors</h2>
-                <div class="container" id="mentors">
 
-                    <div class="col-md-2 mentor">
+                    <div class="col-md-2 weekends-mentor">
                      <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/chvizmpa.jpg">
                     </div>
-                    <div class="col-md-10 mentor">
+                    <div class="col-md-10">
                       <p class="weekends-mentor-bio small">Ο Δρ. Josep Maria Salanova Grau είναι Διπλωματούχος Πολιτικός Μηχανικός U.P.C. (Universitat Politecnica de Catalunya - 2007) και κάτοχος
                       Μεταπτυχιακού τίτλου σπουδών στο Σχεδιασμό, Οργάνωση και Διαχείριση Συστημάτων μεταφορών του Αριστοτελείου Πανεπιστημίου Θεσσαλονίκης
                       (2008-2009). Το διάστημα 2010-2013 πραγματοποιήθηκε την διδακτορική διατριβή του στο Universitat Politecnica de Catalunya με τίτλο «modelling of
@@ -58,30 +57,30 @@
                       εξειδίκευσης είναι οι αλγόριθμοι, τα μοντέλα, η κινητικότητα, οι συνδυασμένες εμπορευματικές μεταφορές και τα συστήματα Logistics ‘έτσι ‘όπως το Data
                       Science και το Big Data στις μεταφορές.</p>
                     </div>
-                  </div>
+
 
                 <div id="schedule">
                     <h2>Schedule</h2>
-                    <div class="weekends-schedule-header">ΠΑΡΑΣΚΕΥΗ -DATE- </div>
+                    <div class="weekends-schedule-header">Παρασκευή 28 Σεπτεμβρίου</div>
                     <div class="weekends-schedule-content">
                         <div class="weekends-schedule-content-item">
                             <div class="weekends-schedule-content-item-time">6:30pm</div>
-                            <div class="weekends-schedule-content-item-what">Registration</div>
-                            <div class="weekends-schedule-content-item-text">Προσέλευση (welcome pack) – επεξήγηση προγράμματος</div>
+                            <div class="weekends-schedule-content-item-what">Προσέλευση</div>
+                            <div class="weekends-schedule-content-item-text">Εγγραφή & πρώτη γνωριμία</div>
                         </div>
                         <div class="weekends-schedule-content-item">
                             <div class="weekends-schedule-content-item-time">6:30pm</div>
-                            <div class="weekends-schedule-content-item-what">Dinner & Networking</div>
-                            <div class="weekends-schedule-content-item-text">Εναρκτήρια ομιλία που θέτει τα προβλήματα και τα κριτήρια αξιολόγησης</div>
+                            <div class="weekends-schedule-content-item-what">Εναρκτήρια ομιλία</div>
+                            <div class="weekends-schedule-content-item-text">Θέτει τα προβλήματα και τα κριτήρια αξιολόγησης</div>
                         </div>
                         <div class="weekends-schedule-content-item">
                             <div class="weekends-schedule-content-item-time">6:30pm</div>
-                            <div class="weekends-schedule-content-item-what">Welcome & Speakers</div>
+                            <div class="weekends-schedule-content-item-what">Παρουσίαση ιδεών</div>
                             <div class="weekends-schedule-content-item-text">1’ pitching ιδεών (+ ανάγκες στελέχωσης)</div>
                         </div>
                         <div class="weekends-schedule-content-item">
                             <div class="weekends-schedule-content-item-time">6:30pm</div>
-                            <div class="weekends-schedule-content-item-what">Pitches Start</div>
+                            <div class="weekends-schedule-content-item-what">Δημιουργία ομάδων</div>
                             <div class="weekends-schedule-content-item-text">Form teams - Teams announcement</div>
                         </div>
                         <div class="weekends-schedule-content-item">
